creating first screen with button and playing audio on button click

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">Blindress</string>
-    <string name="hello_world">Hello, world!</string>
+    <string name="start_text">Начать</string>
 </resources>
