--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="scan_clothing">1. Scan your clothing, one item at a time.</string>
     <string name="give_app_voice_instruction">2. Give app a voice instruction where you store that clothes</string>
     <string name="start_text">Начать</string>
+    <string name="start">Start</string>
 </resources>
